feat:landing page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="../../dist/output.css" rel="stylesheet">
-  <link rel="shortcut icon" href="../img/fav-icon.png" type="image/x-icon">
+   <link href="../dist/output.css" rel="stylesheet">
+  <link rel="shortcut icon" href="../src/img/fav-icon.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
     <div class="bg-gray-800 p-6 drop-shadow-2xl place-items-center flex flex-col">
       
-      <div><img src="../img/logo_aparecida.png" alt="Aparecida de Goiânia" class="h-11"></div>
+      <div><img src="../src/img/logo_aparecida.png" alt="Aparecida de Goiânia" class="h-11"></div>
     </div>
 
     <!-- CAROUSEL -->
@@ -81,7 +81,7 @@
                 <div class="grow-0 shrink-0 basis-auto w-full lg:w-6/12 lg:pr-6 mb-6 lg:mb-0">
                 <div class="relative overflow-hidden bg-no-repeat bg-cover ripple shadow-lg rounded-lg"
                     style="background-position: 50%" data-mdb-ripple="true" data-mdb-ripple-color="light">
-                    <img src="../img/news1.jpeg" class="w-full" alt="Aparecida é Show" />
+                    <img src="../src/img/news1.jpeg" class="w-full" alt="Aparecida é Show" />
                     <a href="#!">
                     <div
                         class="absolute top-0 right-0 bottom-0 left-0 w-full h-full overflow-hidden bg-fixed opacity-0 hover:opacity-100 transition duration-300 ease-in-out"
